created register api and validators
