# src/routes/index.ts
@@ -3,7 +3,7 @@ import Router from 'express';
 import { serverHelper } from '../helpers';
 import { routeConstants } from './definition';
 import { errorCodes } from '../error-codes';
-import dashboard from './dashboard';
+import auth from './auth';
 
 const router = Router();
 
@@ -11,15 +11,14 @@ serverHelper.initializeSwaggerModule(
     {
         router,
         swaggerUri: routeConstants.routes.swaggerURI,
-        customSiteTitle: "My Ideal Recipe"
+        customSiteTitle: "Party Spot"
     }
 )
 
 // Health check
 router.get(routeConstants.routes.root, (req, res) => res.send(errorCodes.Success));
 
-router.post(routeConstants.routes.dashboard.getRecipes, dashboard.getRecipes);
-router.post(routeConstants.routes.dashboard.getRecipeDetails, dashboard.getRecipeDetails);
+router.post(routeConstants.routes.auth.register, auth.register );
 
 export {
     router
